--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: > # this means to ignore newlines until "baseurl:"
   Cahaba Pressure Treated Forest Products
 baseurl: "/cpt-website" # the subpath of your site, e.g. /blog/
 url: "http://www.cahabahapressure.com" # the base hostname & protocol for your site
-homepageurl: "/index2.html"
+homepageurl: "/"
 # Build settings
 gems: []
 markdown: kramdown
